osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_missing_annotation.txt
error: `JsonData(...)` returns a dynamic result, and the assignment must have a type annotation
--> main.sml:1:0
     |
   1 | Foo = JsonData(path='$.foo')
     | ^ add a type annotation, like: `Foo: str = JsonData(...)`